# lingchu-bot

./: .bumpversion.toml  .env.dev  .env.example  .gitignore  CHANGELOG.md  README.md  Repository-Policy.md  bot.py  pyproject.toml  run.py  zensical.toml
.github/ISSUE_TEMPLATE/: 功能请求.md  文档问题.md  错误报告.md
.github/workflows/: canary-release.yml  ci-builds.yml  ci.yml  docs.yml  format.yml  issues-top.yml  release-on-merge.yml  release-updates.yml  version.yml
docs/: index.md
docs/dev/: devlog.md
docs/dev/lib/database/: db-CRUD.md
docs/doc/: get started.md
docs/guide/dev/: dev-logs.md
docs/guide/dev/lib/database/: db-CRUD.md  db-client.md
src/builtin_plugins/lingchu_bot/: __init__.py  config.py
src/builtin_plugins/lingchu_bot/core/: __init__.py
src/builtin_plugins/lingchu_bot/core/api/: __init__.py  apimount.py
src/builtin_plugins/lingchu_bot/core/database/: client.py
src/builtin_plugins/lingchu_bot/core/database/model/: models.py
src/builtin_plugins/lingchu_bot/core/middleware/: README.md  __init__.py
src/builtin_plugins/lingchu_bot/core/middleware/LLbot/: api.py
src/builtin_plugins/lingchu_bot/core/module/: __init__.py
src/builtin_plugins/lingchu_bot/core/module/initial/: scheduler.py  sync.py
src/builtin_plugins/lingchu_bot/core/module/management/: __init__.py  admin.py  ban.py  kick.py  mute.py  notice.py  special_title.py
src/builtin_plugins/lingchu_bot/core/module/management/rule/: mute.py
src/builtin_plugins/lingchu_bot/core/module/management/utils/: msg_seg.py  parse_id.py
src/builtin_plugins/lingchu_bot/core/module/system/: __init__.py  info.py  send.py  switch.py
src/builtin_plugins/lingchu_bot/core/utils/: auth.py  check.py
src/builtin_plugins/lingchu_bot/core/web/: __init__.py  webmount.py
src/builtin_plugins/lingchu_bot/i18n/: translations.py
src/builtin_plugins/lingchu_bot/tools/: __init__.py
